--- a/asana-blocker-frontend/package.json
+++ b/asana-blocker-frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@angular/service-worker": "^15.2.9",
+    "get-current-tab-url": "^1.2.0",
     "ngx-material-timepicker": "^13.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
