--- a/asana-blocker-frontend/package.json
+++ b/asana-blocker-frontend/package.json
@@ -15,13 +15,12 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
+    "@angular/forms": "^15.2.9",
     "@angular/material": "^15.0.3",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "@angular/service-worker": "^15.2.9",
-    "get-current-tab-url": "^1.2.0",
+    "mongodb": "^5.7.0",
     "ngx-material-timepicker": "^13.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
